# data-engineering-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yaml
src/services/: data_frame_statistics_service.py
tests/services/: test_data_frame_statistics_service.py
