[tool.poetry]
name = "data-engineering-project"
version = "0.1.0"
description = "Data Engineering Project for Centric Software"
authors = ["Ayush Pandey <ayushpandey.iitkgp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
